--- a/css/style.css
+++ b/css/style.css
@@ -35,17 +35,19 @@ a {
 #description {
   display: none; }
 
-#about {
-  cursor: pointer;
-  color: #CC6699;
-  text-align: right;
-  padding: 20px; }
-
-#fullvid {
+.full-vid-wrapper {
+  display: none;
   position: absolute;
   top: 0px;
   left: 0px;
-  display: none; }
+  width: 100%;
+  height: 700px; }
+  .full-vid-wrapper #exit-vid {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    color: #CC6699;
+    z-index: 999; }
 
 .signup {
   font-size: 1.3em;
