--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,8 @@ a {
     right: 0px;
     color: #CC6699;
     z-index: 999;
-    padding: 5px; }
+    padding: 5px;
+    cursor: pointer; }
 
 .signup {
   font-size: 1.3em;
