--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,7 +36,8 @@ header{
 	@media screen and (max-width: $break-large) {
 		top:10%;
 		font-size:16px;
-		
+		position: relative;	
+		cursor: none;
   	}
   	@media screen and (max-width: $break-small) {
 		top:2%;
@@ -63,17 +64,18 @@ header{
 		}
 		&:hover {
 			color: $white;
+			@media screen and (max-width: $break-large) {
+				color: $magenta; 
+	  		}
+		}
+		#play{
+			font-size: 3em;
+			@media screen and (max-width: $break-large) {
+				display:none;
+	  		}
+
 		}
   	}
-
-}
-
-#play {
-	font-size: 3em;
-}
-
-#description {
-	// display: none;
 }
 
 
@@ -93,6 +95,20 @@ header{
 		padding: 5px;
 		cursor: pointer;
 	}
+}
+
+#video{
+	@media screen and (max-width: $break-large) {
+				display:none;
+	}
+}
+
+#video-mobile{
+	display:none;
+	@media screen and (max-width: $break-large) {
+				display:inline-block;
+	}
+
 }
 
 .panel {
