--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,6 +34,7 @@ header{
 	width:100%;
 	top:20%;
 	text-align: center;
+	z-index:9999;
 	@media screen and (max-width: $break-large) {
 		top:10%;
 		font-size:16px;
